# LaughDetection

./: .gitignore  .pre-commit-config.yaml  .pylintrc  pyproject.toml  requirements.txt  setup.cfg  setup.py
audioset/: __init__.py  vggish_embeddings.py
src/vggish/: __init__.py  embedder.py  mel.py  params.py  postprocess.py  slim.py
