[metadata]
name = audioset
version = attr: audioset.__version__
description = audioset Detector
long_description = file: README.md

[options]
zip_safe = False
packages = audioset
python_requires = >=3.6
install_requires =
    tensorflow
    six
    numpy
    Keras
    pandas
    scipy
    pyaudio
    resampy
    pydub
    h5py


[options.package_data]
audioset = Models/*, *.ckpt, *.npz