[metadata]
name = vggish
version = 0.1.0
description = VGGish Embeddings Extraction
long_description = file: README.md, CHANGELOG.md
classifiers =
    Programming Language :: Python
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7

[options]
zip_safe = False
package_dir =
    =src
packages = find:
install_requires =
    numpy
    scipy
    resampy
    tensorflow
    six
    pysoundfile
python_requires = >= 3.6, < 4

[options.packages.find]
where = src

[options.package_data]
vggish = *.npz, *.ckpt

[isort]
line_length = 100
multi_line_output = 3
include_trailing_comma = True
force_grid_wrap = 0
use_parentheses = True
default_section = THIRDPARTY

[mypy]
ignore_missing_imports = true
